# TALISMAN-exercise

./: .gitignore  Control-Design-Proposal.md  README.md  investigation-log.md  pyproject.toml  take_home_exercise.ipynb
getting_started/: README.md  getting_started.ipynb
talisman/: __init__.py  env.py  make_folder.md
tests/: make_folder.md  test_env.py
